cabal-version:      3.0
name:               hdlc
version:            0.1.0.0
synopsis:           HDLC Framer/Deframer
description:
    HDLC Framer/Deframer
    .


homepage:           https://github.com/TravisWhitaker/hdlc
bug-reports:        https://github.com/TravisWhitaker/hdlc
license:            MIT
license-file:       LICENSE
author:             Travis Whitaker
maintainer:         pi.boy.travis@gmail.com

copyright:          Travis Whitaker 2026
category:           Network

common common
    default-language: Haskell2010
    ghc-options: -O2
                 -Weverything
                 -Wcompat
                 -- -Werror
                 -Wno-unsafe
                 -Wno-type-defaults
                 -Wno-missing-safe-haskell-mode
                 -Wno-implicit-prelude
                 -Wno-missing-import-lists
                 -Wno-prepositive-qualified-module
                 -Wno-missing-kind-signatures
                 -Wno-monomorphism-restriction
                 -Wno-missing-role-annotations
                 -Wno-missed-specialisations
                 -Wno-all-missed-specialisations
                 -Wno-error=missing-local-signatures

library
    import:           common
    exposed-modules:  Network.HDLC.Async
                      Network.HDLC.Sync
                      Network.HDLC.Util
    --other-modules:
    build-depends:    base >=4.14 && <5
                    , bitvec
                    , bytestring
                    , vector
    hs-source-dirs:   src
